<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabrielaangebrandt.funworld.RegisterActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:layout_below="@+id/tvName"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:layout_below="@id/tvUsername"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/tvPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/repeatPassword"
        android:layout_below="@id/tvPassword1"
        android:textSize="20sp"

        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:layout_below="@id/tvPassword2"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:inputType="textPersonName"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvName"
        android:layout_marginLeft="5dp"
        android:hint="@string/hint_name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:id="@+id/etUsername"
        android:layout_below="@+id/etName"
        android:layout_toRightOf="@+id/tvUsername"
        android:layout_marginLeft="5dp"
        android:hint="@string/egUsername"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etUsername"
        android:inputType="textPassword"
        android:layout_toRightOf="@+id/tvPassword1"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etPassword1"
        android:layout_toRightOf="@+id/tvPassword2"
        android:inputType="textPassword"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etPassword2"
        android:layout_toRightOf="@+id/tvEmail"
        android:layout_marginLeft="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:text="@string/chooseQuestion"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/tvChooseQuestion"/>

    <Spinner
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseQuestion"
        android:layout_below="@+id/tvChooseQuestion" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAnswer"
        android:layout_below="@+id/chooseQuestion"
        android:hint="@string/example_answer"/>



<Button
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:text="@string/register"
    android:textSize="25dp"
    android:id="@+id/registerRegister"
    android:background="@color/colorPrimaryDark"/>

</RelativeLayout>
