<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabrielaangebrandt.funworld.Login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/logo"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_username"
        android:layout_below="@+id/logo"/>
    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/prompt_password"/>
    <Button
    android:layout_width="300dp"
    android:layout_height="55dp"
    android:id="@+id/bLogin"
    android:layout_below="@+id/password"
    android:layout_marginTop="30dp"
    android:layout_centerHorizontal="true"
    android:text="@string/logIn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/tvOr"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bLogin"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:id="@+id/bRegister"
        android:layout_below="@+id/tvOr"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register"/>


</RelativeLayout>
